# leptos-bdk-tauri-starter

./: Cargo.toml  README.md  index.html  rustfmt.toml
src/: main.rs
src-tauri/: tauri.conf.json
