[package]
name = "leptos-bdk-tauri-starter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = "1.0.0-alpha.8"
bip39 = "2.0.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
getrandom = "0.2.14"
leptos = { version = "0.6.10", features = ["csr", "nightly"] }
log = "0.4.21"
